Avtal-170: display contact relations on tenantCard (#645)
