# core/src/api/v1/contacts/schema.ts
@@ -59,6 +59,8 @@ export const RelatedContactSchema = z.object({
   contactCode: z.string(),
   role: RelatedContactRoleSchema,
   fullName: z.string(),
+  firstName: z.string(),
+  lastName: z.string(),
 })
 
 export const ContactBaseSchema = z.object({
